Modifiers make materials disappear in BGE #24948

Closed
opened 2010-11-27 19:03:31 +01:00 by Dave Heinemann · 13 comments

Category: Rendering

%%%Two objects use the same material, which is the 2nd material slot for the first object created.

The first object has (any?) modifier except Armature. eg. Subsurf works.

Result:
On one object the shared material does not show in BGE, the faces are invisible.

The material index isn't reset to zero for the modified mesh probably, this has happened before. But it only happens if the material is the same.

Windows Vista 64, NVidia GeForce GT 240, Blender 2.55 official, VBO off.


The tracker is down to 3 pages - awesome job everyone!

Dave Heinemann%%%

**Category**: Rendering %%%Two objects use the same material, which is the 2nd material slot for the first object created. The first object has (any?) modifier except Armature. eg. Subsurf works. Result: On one object the shared material does not show in BGE, the faces are invisible. The material index isn't reset to zero for the modified mesh probably, this has happened before. But it only happens if the material is the same. Windows Vista 64, NVidia GeForce GT 240, Blender 2.55 official, VBO off. -------- The tracker is down to 3 pages - awesome job everyone! Dave Heinemann%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

#37800 was marked as duplicate of this issue

#37800 was marked as duplicate of this issue

#41686 was marked as duplicate of this issue

#41686 was marked as duplicate of this issue

%%%ubuntu10.04 64bits rev33360

I can reproduce it with a shared material in third slot, too.

%%%

%%%ubuntu10.04 64bits rev33360 I can reproduce it with a shared material in third slot, too. %%%
Member

%%%Moving to GE tracker%%%

%%%Moving to GE tracker%%%

Added subscriber: @mont29

Added subscriber: @mont29

Issue still present in current master…

Issue still present in current master…
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscribers: @raco, @brita, @bombaba, @brecht, @Paul.Brachmann

Added subscribers: @raco, @brita, @bombaba, @brecht, @Paul.Brachmann
Member

Added subscribers: @Moguri, @karja, @Sergey, @Ace_Dragon

Added subscribers: @Moguri, @karja, @Sergey, @Ace_Dragon

Added subscriber: @NikoLeopold

Added subscriber: @NikoLeopold

Still an issue in current master, this really has been around a long time :)

Short summary of what is known: Only happens after conversion for BGE for objects with active modifiers that alter geometry. Applying the modifier, or duplicating the problematic object with the modifier avoids the issue, duplicating the other object leads to the symptoms again.
It seems that the material indices of the slots from the other object (or from the last duplicated object) are used in the object with the modifier, as described in following scene (adapted from other report) BGE_modifier_material_indices_from_wrong_object.blend.

Looked into gameengine/Converter/BL_ModifierDeformer.cpp and others but could not yet find anything. Wonder where else this might be caused.

Still an issue in current master, this really has been around a long time :) Short summary of what is known: Only happens after conversion for BGE for objects with active modifiers that alter geometry. Applying the modifier, or duplicating the problematic object with the modifier avoids the issue, duplicating the other object leads to the symptoms again. It seems that the material indices of the slots from the other object (or from the last duplicated object) are used in the object with the modifier, as described in following scene (adapted from other report) [BGE_modifier_material_indices_from_wrong_object.blend](https://archive.blender.org/developer/F285756/BGE_modifier_material_indices_from_wrong_object.blend). Looked into gameengine/Converter/BL_ModifierDeformer.cpp and others but could not yet find anything. Wonder where else this might be caused.
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Aaron Carlisle self-assigned this 2019-06-29 02:11:50 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#24948
No description provided.